<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent" android:layout_height="0dp"
            android:src="@drawable/pedidosyalogo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>


    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/please_login" app:layout_constraintBottom_toTopOf="@+id/user"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView" android:layout_marginBottom="16dp"/>

    <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/user"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/pass"
            android:layout_marginBottom="24dp" />

    <EditText
            android:id="@+id/pass"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"/>


    <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="160dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>