<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/light_dark"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurant_feed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/list_layout_animation_bottom_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restaurant_feed"/>

    <TextView
            android:id="@+id/loading_text"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/loading_restaurants"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loading_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/network_error_text"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/network_error"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/empty_state"
            android:visibility="gone"
            tools:visibility="visible"
            android:text="@string/no_restaurants"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>